Fixed html, body alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -71,11 +71,16 @@
 
 /* CSS For Elements */
 
-body{
+*{
 	margin: 0;
 	padding: 0;
-	width: 100%;
-	height: 100%;
+}
+
+
+body{
+	border:  2px solid green;
+	min-width: 100%;
+	min-height: 100vh;
 	font-size:  1.2em;
 	font-weight: :  400;
 	line-height: 1.8em;
@@ -83,7 +88,11 @@ body{
 }
 
 html{
+	min-height: 100%;
+	min-width: 100%;
 	scroll-behavior: smooth;
+	border: 1px solid black;
+	position: fixed;
 }
 /*
 
